[package]
name = "webcam_stream_wasm"
version = "0.1.0"
authors = ["mahadeer13 <mahadeer2010@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.6.5"
wasm-bindgen = { version = "0.2.40", features = ["serde-serialize"]  }
js-sys = "0.3.17"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Navigator',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageCapture',
  'VideoStreamTrack',
  'MediaDevices',
  'MediaStreamConstraints',
  'MediaStream',
  'HtmlMediaElement'
]